# serializer version: 1
# name: test_selects[de-select.keba_keenergy_12345678_buffer_tank_operating_mode_1-buffer_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_buffer_tank_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_buffer_tank_operating_mode_1-buffer_tank_operating_mode].1
  dict({
    'heat_up': 'Aufheizen',
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_buffer_tank_operating_mode_2-buffer_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_buffer_tank_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_buffer_tank_operating_mode_2-buffer_tank_operating_mode].1
  dict({
    'heat_up': 'Aufheizen',
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_external_heat_source_operating_mode_1-external_heat_source_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_external_heat_source_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_external_heat_source_operating_mode_1-external_heat_source_operating_mode].1
  dict({
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_external_heat_source_operating_mode_2-external_heat_source_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_external_heat_source_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_external_heat_source_operating_mode_2-external_heat_source_operating_mode].1
  dict({
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_heat_circuit_cooling_curve_2-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 2 Kühlkurve',
      'icon': 'mdi:chart-bell-curve-cumulative',
      'options': list([
        'HC1',
        'HC2',
        'HC3',
        'HC4',
        'HC5',
        'HC6',
        'HC7',
        'HC8',
        'HC FBH',
        'HC HK',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_cooling_curve_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'HC5',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_heat_circuit_heating_curve_1-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 1 Heizkurve',
      'icon': 'mdi:chart-bell-curve-cumulative',
      'options': list([
        'HC1',
        'HC2',
        'HC3',
        'HC4',
        'HC5',
        'HC6',
        'HC7',
        'HC8',
        'HC FBH',
        'HC HK',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_heating_curve_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'HC6',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_hot_water_tank_operating_mode_1-hot_water_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Warmwasserspeicher 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_hot_water_tank_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_up',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_hot_water_tank_operating_mode_1-hot_water_tank_operating_mode].1
  dict({
    'auto': 'Zeitplan',
    'heat_up': 'Aufheizen',
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_hot_water_tank_operating_mode_2-hot_water_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Warmwasserspeicher 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_hot_water_tank_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_hot_water_tank_operating_mode_2-hot_water_tank_operating_mode].1
  dict({
    'auto': 'Zeitplan',
    'heat_up': 'Aufheizen',
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_solar_circuit_operating_mode_1-solar_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_solar_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_solar_circuit_operating_mode_1-solar_circuit_operating_mode].1
  dict({
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_solar_circuit_operating_mode_2-solar_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_solar_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[de-select.keba_keenergy_12345678_solar_circuit_operating_mode_2-solar_circuit_operating_mode].1
  dict({
    'off': 'Aus',
    'on': 'Ein',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_buffer_tank_operating_mode_1-buffer_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_buffer_tank_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_buffer_tank_operating_mode_1-buffer_tank_operating_mode].1
  dict({
    'heat_up': 'Heat up',
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_buffer_tank_operating_mode_2-buffer_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_buffer_tank_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_buffer_tank_operating_mode_2-buffer_tank_operating_mode].1
  dict({
    'heat_up': 'Heat up',
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_external_heat_source_operating_mode_1-external_heat_source_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_external_heat_source_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_external_heat_source_operating_mode_1-external_heat_source_operating_mode].1
  dict({
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_external_heat_source_operating_mode_2-external_heat_source_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_external_heat_source_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_external_heat_source_operating_mode_2-external_heat_source_operating_mode].1
  dict({
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_heat_circuit_cooling_curve_2-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 2 Cooling curve',
      'icon': 'mdi:chart-bell-curve-cumulative',
      'options': list([
        'HC1',
        'HC2',
        'HC3',
        'HC4',
        'HC5',
        'HC6',
        'HC7',
        'HC8',
        'HC FBH',
        'HC HK',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_cooling_curve_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'HC5',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_heat_circuit_heating_curve_1-None]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 1 Heating curve',
      'icon': 'mdi:chart-bell-curve-cumulative',
      'options': list([
        'HC1',
        'HC2',
        'HC3',
        'HC4',
        'HC5',
        'HC6',
        'HC7',
        'HC8',
        'HC FBH',
        'HC HK',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_heating_curve_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'HC6',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_hot_water_tank_operating_mode_1-hot_water_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hot water tank 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_hot_water_tank_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_up',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_hot_water_tank_operating_mode_1-hot_water_tank_operating_mode].1
  dict({
    'auto': 'Schedule',
    'heat_up': 'Heat up',
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_hot_water_tank_operating_mode_2-hot_water_tank_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hot water tank 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'on',
        'heat_up',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_hot_water_tank_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_hot_water_tank_operating_mode_2-hot_water_tank_operating_mode].1
  dict({
    'auto': 'Schedule',
    'heat_up': 'Heat up',
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_solar_circuit_operating_mode_1-solar_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_solar_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_solar_circuit_operating_mode_1-solar_circuit_operating_mode].1
  dict({
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_solar_circuit_operating_mode_2-solar_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'on',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_solar_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_selects[en-select.keba_keenergy_12345678_solar_circuit_operating_mode_2-solar_circuit_operating_mode].1
  dict({
    'off': 'Off',
    'on': 'On',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'day',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Tag',
    'holiday': 'Urlaub',
    'night': 'Nacht',
    'off': 'Aus',
    'party': 'Party',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Tag',
    'night': 'Nacht',
    'off': 'Aus',
    'party': 'Party',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_operating_mode-system_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedieneinheit Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'standby',
        'summer',
        'auto_heat',
        'auto_cool',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_operating_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto_heat',
  })
# ---
# name: test_selects_with_cooling[de-select.keba_keenergy_12345678_operating_mode-system_operating_mode].1
  dict({
    'auto': 'Automatik',
    'auto_cool': 'Kühlen',
    'auto_heat': 'Heizen',
    'standby': 'Standby',
    'summer': 'nur Warmwasser',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'day',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Day',
    'holiday': 'Away',
    'night': 'Night',
    'off': 'Off',
    'party': 'Party',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Day',
    'night': 'Night',
    'off': 'Off',
    'party': 'Party',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_operating_mode-system_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Control unit Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'standby',
        'summer',
        'auto_heat',
        'auto_cool',
        'auto',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_operating_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto_heat',
  })
# ---
# name: test_selects_with_cooling[en-select.keba_keenergy_12345678_operating_mode-system_operating_mode].1
  dict({
    'auto': 'Automatic',
    'auto_cool': 'Cooling',
    'auto_heat': 'Heating',
    'standby': 'Standby',
    'summer': 'Hot water only',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 1 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'day',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Tag',
    'holiday': 'Urlaub',
    'night': 'Nacht',
    'off': 'Aus',
    'party': 'Party',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heizkreis 2 Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Tag',
    'night': 'Nacht',
    'off': 'Aus',
    'party': 'Party',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_operating_mode-system_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedieneinheit Betriebsart',
      'icon': 'mdi:cog',
      'options': list([
        'standby',
        'summer',
        'auto_heat',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_operating_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto_heat',
  })
# ---
# name: test_selects_without_cooling[de-select.keba_keenergy_12345678_operating_mode-system_operating_mode].1
  dict({
    'auto_heat': 'Heizen',
    'standby': 'Standby',
    'summer': 'nur Warmwasser',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 1 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
        'holiday',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'day',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_1-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Day',
    'holiday': 'Away',
    'night': 'Night',
    'off': 'Off',
    'party': 'Party',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heating circuit 2 Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'off',
        'auto',
        'day',
        'night',
        'party',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_heat_circuit_operating_mode_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_heat_circuit_operating_mode_2-heat_circuit_operating_mode].1
  dict({
    'auto': 'Auto',
    'day': 'Day',
    'night': 'Night',
    'off': 'Off',
    'party': 'Party',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_operating_mode-system_operating_mode]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Control unit Operating mode',
      'icon': 'mdi:cog',
      'options': list([
        'standby',
        'summer',
        'auto_heat',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.keba_keenergy_12345678_operating_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto_heat',
  })
# ---
# name: test_selects_without_cooling[en-select.keba_keenergy_12345678_operating_mode-system_operating_mode].1
  dict({
    'auto_heat': 'Heating',
    'standby': 'Standby',
    'summer': 'Hot water only',
  })
# ---
